--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "admin-lte": "3.0",
     "bootstrap": "^5.1.3",
     "json-server": "^0.17.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
